--- a/src/cascadia/TerminalSettingsEditor/AISettings.xaml
+++ b/src/cascadia/TerminalSettingsEditor/AISettings.xaml
@@ -55,16 +55,16 @@
                                            VerticalAlignment="Center" />
                                 <CheckBox Grid.Row="1"
                                           HorizontalAlignment="Left"
-                                          IsChecked="{x:Bind ViewModel.GithubCopilotActive, Mode=OneWay}"
                                           Checked="SetGithubCopilotActive_Check"
+                                          IsChecked="{x:Bind ViewModel.GithubCopilotActive, Mode=OneWay}"
                                           Unchecked="SetGithubCopilotActive_Uncheck">
                                     <TextBlock x:Uid="AISettings_SetActiveProvider" />
                                 </CheckBox>
                             </StackPanel>
                             <Button Grid.Column="1"
+                                    HorizontalAlignment="Right"
                                     Click="ClearGithubCopilotTokens_Click"
-                                    Style="{StaticResource DeleteButtonStyle}"
-                                    HorizontalAlignment="Right">
+                                    Style="{StaticResource DeleteButtonStyle}">
                                 <TextBlock x:Uid="AISettings_ClearGithubCopilotTokens" />
                             </Button>
                         </Grid>
@@ -78,8 +78,8 @@
                             <Grid Grid.Row="0"
                                   Grid.Column="0"
                                   Padding="16"
-                                  CornerRadius="4"
-                                  ColumnSpacing="14">
+                                  ColumnSpacing="14"
+                                  CornerRadius="4">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
@@ -89,38 +89,46 @@
                                                      Color="#404040" />
                                 </Grid.Background>
                                 <muxc:InfoBadge x:Name="GithubCopilotDescriptionInfoBadge"
+                                                Grid.Column="0"
                                                 VerticalAlignment="Top"
                                                 FontSize="16"
-                                                Grid.Column="0"
                                                 Style="{ThemeResource AttentionIconInfoBadgeStyle}">
                                     <muxc:InfoBadge.IconSource>
                                         <muxc:FontIconSource FontSize="16"
                                                              Glyph="&#xE625;" />
                                     </muxc:InfoBadge.IconSource>
                                 </muxc:InfoBadge>
-                                <RichTextBlock TextWrapping="WrapWholeWords"
-                                               Grid.Column="1">
+                                <RichTextBlock Grid.Column="1"
+                                               TextWrapping="WrapWholeWords"
+                                               Visibility="{x:Bind ViewModel.IsTerminalPackaged}">
                                     <Paragraph>
                                         <Run x:Uid="AISettings_GithubCopilotPrerequisite" />
                                         <LineBreak />
                                         <LineBreak />
                                         <Run x:Name="AISettings_GithubCopilotSignUpAndLearnMorePart1" /><Hyperlink NavigateUri="https://go.microsoft.com/fwlink/?linkid=2285598"
-                                                   TextDecorations="None"><Run x:Name="AISettings_GithubCopilotSignUpLinkText" />
+                                                   TextDecorations="None">
+                                            <Run x:Name="AISettings_GithubCopilotSignUpLinkText" />
                                         </Hyperlink><Run x:Name="AISettings_GithubCopilotSignUpAndLearnMorePart2" /><Hyperlink NavigateUri="https://go.microsoft.com/fwlink/?linkid=2285390"
-                                                   TextDecorations="None"><Run x:Name="AISettings_GithubCopilotLearnMoreLinkText" />
+                                                   TextDecorations="None">
+                                            <Run x:Name="AISettings_GithubCopilotLearnMoreLinkText" />
                                         </Hyperlink><Run x:Name="AISettings_GithubCopilotSignUpAndLearnMorePart3" />
                                     </Paragraph>
                                 </RichTextBlock>
+                                <TextBlock x:Uid="AISettings_PortableModeDisclaimer"
+                                           Grid.Column="1"
+                                           Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(ViewModel.IsTerminalPackaged)}" />
                             </Grid>
                             <StackPanel Grid.Row="1"
-                                        Orientation="Horizontal"
                                         HorizontalAlignment="Right"
                                         VerticalAlignment="Center"
-                                        Spacing="8">
-                                <TextBlock Text="{x:Bind ViewModel.GithubCopilotAuthMessage, Mode=OneWay}"
-                                           VerticalAlignment="Center"/>
+                                        Orientation="Horizontal"
+                                        Spacing="8"
+                                        Visibility="{x:Bind ViewModel.IsTerminalPackaged}">
+                                <TextBlock VerticalAlignment="Center"
+                                           Text="{x:Bind ViewModel.GithubCopilotAuthMessage, Mode=OneWay}" />
                                 <Button Click="{x:Bind ViewModel.InitiateGithubAuth_Click}"
-                                        Style="{StaticResource AccentButtonStyle}">
+                                        Style="{StaticResource AccentButtonStyle}"
+                                        Visibility="{x:Bind ViewModel.IsTerminalPackaged}">
                                     <TextBlock x:Uid="AISettings_InitiateGithubAuthFlow" />
                                 </Button>
                             </StackPanel>
@@ -143,16 +151,16 @@
                                            VerticalAlignment="Center" />
                                 <CheckBox Grid.Row="1"
                                           HorizontalAlignment="Left"
-                                          IsChecked="{x:Bind ViewModel.AzureOpenAIActive, Mode=OneWay}"
                                           Checked="SetAzureOpenAIActive_Check"
+                                          IsChecked="{x:Bind ViewModel.AzureOpenAIActive, Mode=OneWay}"
                                           Unchecked="SetAzureOpenAIActive_Uncheck">
                                     <TextBlock x:Uid="AISettings_SetActiveProvider" />
                                 </CheckBox>
                             </StackPanel>
                             <Button Grid.Column="1"
+                                    HorizontalAlignment="Right"
                                     Click="ClearAzureOpenAIKeyAndEndpoint_Click"
-                                    Style="{StaticResource DeleteButtonStyle}"
-                                    HorizontalAlignment="Right">
+                                    Style="{StaticResource DeleteButtonStyle}">
                                 <TextBlock x:Uid="AISettings_ClearAzureOpenAIKeyAndEndpoint" />
                             </Button>
                         </Grid>
@@ -169,8 +177,8 @@
                             <Grid Grid.Row="0"
                                   Grid.Column="0"
                                   Padding="16"
-                                  CornerRadius="4"
-                                  ColumnSpacing="14">
+                                  ColumnSpacing="14"
+                                  CornerRadius="4">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
@@ -180,17 +188,17 @@
                                                      Color="#404040" />
                                 </Grid.Background>
                                 <muxc:InfoBadge x:Name="AzureOpenAIDescriptionInfoBadge"
+                                                Grid.Column="0"
                                                 VerticalAlignment="Top"
                                                 FontSize="16"
-                                                Grid.Column="0"
                                                 Style="{ThemeResource AttentionIconInfoBadgeStyle}">
                                     <muxc:InfoBadge.IconSource>
                                         <muxc:FontIconSource FontSize="16"
                                                              Glyph="&#xE625;" />
                                     </muxc:InfoBadge.IconSource>
                                 </muxc:InfoBadge>
-                                <RichTextBlock TextWrapping="WrapWholeWords"
-                                               Grid.Column="1">
+                                <RichTextBlock Grid.Column="1"
+                                               TextWrapping="WrapWholeWords">
                                     <Paragraph>
                                         <Run x:Uid="AISettings_AzureOpenAIDescription" />
                                         <LineBreak />
@@ -267,16 +275,16 @@
                                            VerticalAlignment="Center" />
                                 <CheckBox Grid.Row="1"
                                           HorizontalAlignment="Left"
-                                          IsChecked="{x:Bind ViewModel.OpenAIActive, Mode=OneWay}"
                                           Checked="SetOpenAIActive_Check"
+                                          IsChecked="{x:Bind ViewModel.OpenAIActive, Mode=OneWay}"
                                           Unchecked="SetOpenAIActive_Uncheck">
                                     <TextBlock x:Uid="AISettings_SetActiveProvider" />
                                 </CheckBox>
                             </StackPanel>
                             <Button Grid.Column="1"
+                                    HorizontalAlignment="Right"
                                     Click="ClearOpenAIKey_Click"
-                                    Style="{StaticResource DeleteButtonStyle}"
-                                    HorizontalAlignment="Right">
+                                    Style="{StaticResource DeleteButtonStyle}">
                                 <TextBlock x:Uid="AISettings_ClearOpenAIKey" />
                             </Button>
                         </Grid>
@@ -293,8 +301,8 @@
                             <Grid Grid.Row="0"
                                   Grid.Column="0"
                                   Padding="16"
-                                  CornerRadius="4"
-                                  ColumnSpacing="14">
+                                  ColumnSpacing="14"
+                                  CornerRadius="4">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="*" />
@@ -304,9 +312,9 @@
                                                      Color="#404040" />
                                 </Grid.Background>
                                 <muxc:InfoBadge x:Name="OpenAIDescriptionInfoBadge"
+                                                Grid.Column="0"
                                                 VerticalAlignment="Top"
                                                 FontSize="16"
-                                                Grid.Column="0"
                                                 Style="{ThemeResource AttentionIconInfoBadgeStyle}">
                                     <muxc:InfoBadge.IconSource>
                                         <muxc:FontIconSource FontSize="16"
