--- a/src/cascadia/QueryExtension/ExtensionPalette.xaml
+++ b/src/cascadia/QueryExtension/ExtensionPalette.xaml
@@ -163,10 +163,10 @@
             </Style>
             <DataTemplate x:Key="QueryGroupedMessageTemplate"
                           x:DataType="local:GroupedChatMessages">
-                <StackPanel Orientation="Horizontal"
-                            Margin="0,0,0,-6"
+                <StackPanel Margin="0,0,0,-6"
                             HorizontalAlignment="Right"
                             VerticalAlignment="Bottom"
+                            Orientation="Horizontal"
                             Spacing="4">
                     <TextBlock FontFamily="Segoe UI"
                                FontSize="12">
@@ -181,12 +181,12 @@
             </DataTemplate>
             <DataTemplate x:Key="ResponseGroupedMessageTemplate"
                           x:DataType="local:GroupedChatMessages">
-                <StackPanel Orientation="Horizontal"
-                            Margin="0,0,0,-6"
+                <StackPanel Margin="0,0,0,-6"
                             HorizontalAlignment="Left"
                             VerticalAlignment="Bottom"
+                            Orientation="Horizontal"
                             Spacing="4">
-                    <mux:ImageIcon Source="{x:Bind BadgeBitmapImage}"/>
+                    <mux:ImageIcon Source="{x:Bind BadgeBitmapImage}" />
                     <TextBlock FontFamily="Segoe UI"
                                FontSize="12">
                         <Run Text="{x:Bind Attribution}" />
