--- a/src/cascadia/QueryExtension/ExtensionPalette.xaml
+++ b/src/cascadia/QueryExtension/ExtensionPalette.xaml
@@ -163,26 +163,40 @@
             </Style>
             <DataTemplate x:Key="QueryGroupedMessageTemplate"
                           x:DataType="local:GroupedChatMessages">
-                <TextBlock Margin="0,0,0,-6"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Bottom"
-                           FontFamily="Segoe UI"
-                           FontSize="12"
-                           Opacity="0.786">
-                    <Run Text="{x:Bind Key}" />
-                </TextBlock>
+                <StackPanel Margin="0,0,0,-6"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom"
+                            Orientation="Horizontal"
+                            Spacing="4">
+                    <TextBlock FontFamily="Segoe UI"
+                               FontSize="12">
+                        <Run Text="{x:Bind Attribution}" />
+                    </TextBlock>
+                    <TextBlock FontFamily="Segoe UI"
+                               FontSize="12"
+                               Opacity="0.786">
+                        <Run Text="{x:Bind Key}" />
+                    </TextBlock>
+                </StackPanel>
             </DataTemplate>
             <DataTemplate x:Key="ResponseGroupedMessageTemplate"
                           x:DataType="local:GroupedChatMessages">
-                <TextBlock Margin="0,0,0,-6"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Bottom"
-                           FontFamily="Segoe UI"
-                           FontSize="12"
-                           Opacity="0.786">
-                    <Run Text="{x:Bind ProfileName}" />
-                    <Run Text="{x:Bind Key}" />
-                </TextBlock>
+                <StackPanel Margin="0,0,0,-6"
+                            HorizontalAlignment="Left"
+                            VerticalAlignment="Bottom"
+                            Orientation="Horizontal"
+                            Spacing="4">
+                    <mux:ImageIcon Source="{x:Bind BadgeBitmapImage}" />
+                    <TextBlock FontFamily="Segoe UI"
+                               FontSize="12">
+                        <Run Text="{x:Bind Attribution}" />
+                    </TextBlock>
+                    <TextBlock FontFamily="Segoe UI"
+                               FontSize="12"
+                               Opacity="0.786">
+                        <Run Text="{x:Bind Key}" />
+                    </TextBlock>
+                </StackPanel>
             </DataTemplate>
             <local:ExtensionPaletteGroupedMessagesHeaderTemplateSelector x:Key="GroupedChatMessageTemplateSelector"
                                                                          QueryGroupedMessageTemplate="{StaticResource QueryGroupedMessageTemplate}"
@@ -294,15 +308,14 @@
                                     <ColumnDefinition Width="1*" />
                                     <ColumnDefinition Width="1*" />
                                 </Grid.ColumnDefinitions>
-                                <mux:ImageIcon Grid.Row="0"
+                                <mux:ImageIcon Name="HeaderIcon"
+                                               Grid.Row="0"
                                                Grid.Column="1"
                                                Grid.ColumnSpan="3"
                                                Width="64"
                                                Height="64"
-                                               Margin="0,0,0,20"
-                                               Source="ms-appx:///ProfileIcons/terminalChatLogo.png" />
+                                               Margin="0,0,0,20" />
                                 <TextBlock x:Name="QueryIntro"
-                                           x:Uid="IntroText"
                                            Grid.Row="1"
                                            Grid.Column="1"
                                            Grid.ColumnSpan="3"
@@ -319,7 +332,7 @@
                                                Foreground="{ThemeResource ApplicationSecondaryForegroundThemeBrush}"
                                                HorizontalTextAlignment="Center"
                                                TextWrapping="WrapWholeWords">
-                                        <Run x:Uid="TitleSubheader" />
+                                        <Run x:Name="TitleSubheader" />
                                     </TextBlock>
                                 </Border>
                                 <StackPanel Grid.Row="3"
